# regression-test

./: Cargo.toml  LICENSE  README.md
example-lib/: Cargo.toml
example-lib/regtest_data/src/lib/: it_works.json  random_number_test.json
example-lib/regtest_data/src/my_module/mod/: it_subtracts_correctly.json
example-lib/regtest_data/tests/my_integration_tests/: another_integration_test.json  my_integration_test.json
example-lib/src/: lib.rs
example-lib/src/my_module/: mod.rs
example-lib/tests/: my_integration_tests.rs
regression-test/: Cargo.toml
regression-test-macros/: Cargo.toml
regression-test-macros/src/: lib.rs
regression-test/regtest_data/: regression.json
regression-test/src/: lib.rs
