[package]
name = "regression-test-macros"
version = "0.1.0"
edition = "2024"
authors = ["george-cosma"]
description = "Helper macros for the regression-test library"
license = "MIT"
repository = "https://github.com/george-cosma/regression-test"
readme = "../README.md"
keywords = ["regression", "testing", "macros"]
categories = ["development-tools", "development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
regression-test = { path = "../regression-test" }
syn = { version = "2.0.104", features = ["full"] }
