[package]
name = "regression-test"
version = "0.1.0"
edition = "2024"
authors = ["george-cosma"]
description = "A Rust library for regression testing"
license = "MIT"
repository = "https://github.com/george-cosma/regression-test"
readme = "../README.md"
keywords = ["regression", "testing"]
categories = ["development-tools", "development-tools::testing"]
exclude = ["regtest_data/*"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
